# RUST-MONITORING

./: .env  Cargo.toml  Secrets.toml
config/: development.yaml  test.yaml
examples/: playground.rs
migration/src/: lib.rs  m20250102_105614_category_fishes.rs  m20250102_105718_limitations.rs  m20250102_105814_monitorings.rs  m20250102_105946_monitoring_data.rs
src/: app.rs
src/controllers/: category_fish.rs  limitation.rs  mod.rs  monitoring.rs  monitoring_data.rs
src/fixtures/: category_fish.yaml  users.yaml
src/models/: category_fishes.rs  limitations.rs  mod.rs  monitoring_data.rs  monitorings.rs
src/models/_entities/: category_fishes.rs  limitations.rs  mod.rs  monitoring_data.rs  monitorings.rs  prelude.rs  users.rs
tests/models/: category_fishes.rs  mod.rs  users.rs
tests/requests/: auth.rs  category_fish.rs  limitation.rs  mod.rs  monitoring.rs  monitoring_data.rs  prepare_data.rs
tests/tasks/: seed.rs
